--- a/impressum.html
+++ b/impressum.html
@@ -27,7 +27,7 @@ class="ie9"><![endif]--><!--[if (gt IE 9)|!(IE)]><!--><body><!--<![endif]-->
   <a href="index.html">startseite</a>
   
   Impressum</h2></div></div></div></div><div class="container slot-two-columns"><div class="row"><div class="col-xs-12 col-md-8">
-<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> In d. neuen Lach 13, 63303 Dreieich <br><p class="bodytext"><strong>Telefon:</strong> 01579-26438-41<br> <strong>E-Mail:</strong> <a href="mailtoinfo@elektriker-gassner.de">info@elektriker-gassner.de</a></p><p class="bodytext"><strong>Geschäftsführer:</strong>  Freddy Gassner
+<a id="c8"></a><div class="content-text m-b-1"><div class="row"><div class="col-sm-12"><p class="bodytext"><strong>Postanschrift:</strong><br> In d. neuen Lach 13, 63303 Dreieich <br><p class="bodytext"><strong>Telefon:</strong> 01579-26438-41<br> <strong>E-Mail:</strong> <a href="mailto:info@elektriker-gassner.de">info@elektriker-gassner.de</a></p><p class="bodytext"><strong>Geschäftsführer:</strong>  Freddy Gassner
   
   
   
